src/snapshots/beans_xml__bean__tests__sb06b_lookup_method_with_name_and_bean_snapshot.snap
---
source: src/bean.rs
expression: bean
---
{
  "span": {
    "start": 0,
    "end": 111
  },
  "id": {
    "value": "myBean",
    "span": {
      "start": 10,
      "end": 16
    }
  },
  "names": [],
  "class": {
    "value": {
      "raw": "com.example.MyService"
    },
    "span": {
      "start": 25,
      "end": 46
    }
  },
  "parent": null,
  "scope": null,
  "abstract": false,
  "lazy_init": null,
  "primary": false,
  "autowire": null,
  "autowire_candidate": null,
  "depends_on": [],
  "factory_bean": null,
  "factory_method": null,
  "init_method": null,
  "destroy_method": null,
  "properties": [],
  "constructor_args": [],
  "lookup_methods": [
    {
      "value": {
        "name": {
          "value": "createCommand",
          "span": {
            "start": 69,
            "end": 82
          }
        },
        "bean": {
          "value": {
            "raw": "commandBean",
            "kind": "bean"
          },
          "span": {
            "start": 90,
            "end": 101
          }
        }
      },
      "span": {
        "start": 48,
        "end": 104
      }
    }
  ],
  "replaced_methods": [],
  "qualifiers": [],
  "decorators": [],
  "description": null,
  "meta": []
}
