src/snapshots/beans_xml__bean__tests__sb06b_replaced_method_with_name_replacer_and_arg_types_snapshot.snap
---
source: src/bean.rs
expression: bean
---
{
  "span": {
    "start": 0,
    "end": 193
  },
  "id": {
    "value": "myBean",
    "span": {
      "start": 10,
      "end": 16
    }
  },
  "names": [],
  "class": {
    "value": {
      "raw": "com.example.MyService"
    },
    "span": {
      "start": 25,
      "end": 46
    }
  },
  "parent": null,
  "scope": null,
  "abstract": false,
  "lazy_init": null,
  "primary": false,
  "autowire": null,
  "autowire_candidate": null,
  "depends_on": [],
  "factory_bean": null,
  "factory_method": null,
  "init_method": null,
  "destroy_method": null,
  "properties": [],
  "constructor_args": [],
  "lookup_methods": [],
  "replaced_methods": [
    {
      "value": {
        "name": {
          "value": "computeValue",
          "span": {
            "start": 71,
            "end": 83
          }
        },
        "replacer": {
          "value": {
            "raw": "replacerBean",
            "kind": "bean"
          },
          "span": {
            "start": 95,
            "end": 107
          }
        },
        "arg_types": [
          {
            "value": "java.lang.String",
            "span": {
              "start": 126,
              "end": 142
            }
          },
          {
            "value": "int",
            "span": {
              "start": 162,
              "end": 165
            }
          }
        ]
      },
      "span": {
        "start": 48,
        "end": 186
      }
    }
  ],
  "qualifiers": [],
  "decorators": [],
  "description": null,
  "meta": []
}
